[package]
name = "timeout-macro-parse"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
