[package]
name = "timeout-macro-parse"
version = "0.1.0"
license = "MIT"
edition = "2021"
readme = "../Readme.md"
repository = "https://github.com/MarcusGrass/timeout"
homepage = "https://github.com/MarcusGrass/timeout"
description = "A companion-crate for the tokio-timeout proc-macro-lib"
documentation = "https://docs.rs/tokio-timeout"
categories = ["asynchronous", "rust-patterns"]
keywords = ["async", "macro", "tokio"]

[features]
default = []
test = ["dep:proc-macro2"]

[dependencies]
proc-macro2 = { version = "1.0.95", optional = true }

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "benchmark"
harness = false