[package]
name = "timeout-macro-parse"
version = "0.2.0"
license = "MIT"
edition = "2021"
readme = "../Readme.md"
repository = "https://github.com/MarcusGrass/timeout"
homepage = "https://github.com/MarcusGrass/timeout"
description = "A companion-crate for the tokio-timeout proc-macro-lib"
documentation = "https://docs.rs/tokio-timeout"
categories = ["asynchronous", "rust-patterns"]
keywords = ["async", "macro", "tokio"]

[features]
default = []
# proc-macro 2 is necessary for benches and tests
test = ["dep:proc-macro2"]
# criterion pulls up the MSRV by a lot and therefore needs to be kept separately
bench = ["test", "dep:criterion"]

[dependencies]
proc-macro2 = { version = "1.0.95", optional = true }
criterion = { version = "0.6.0", optional = true }

[[bench]]
name = "benchmark"
harness = false