[package]
name = "tokio-timeout"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
timeout-macro-parse = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
tokio = { version = "1.45.1", features = ["time", "macros", "rt"] }